fix about section view on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -1075,7 +1075,8 @@ body {
 }
 @media (max-width: 56.25em) {
   .section-about {
-    padding: 35rem 0;
+    padding: 20rem 0;
+    margin-bottom: 10rem;
   }
 }
 
