--- a/saas/pages/_home.scss
+++ b/saas/pages/_home.scss
@@ -4,7 +4,8 @@
   margin-top: -20vh;
 
   @include respond(tab-port) {
-    padding: 35rem 0;
+    padding: 20rem 0;
+	margin-bottom: 10rem;
   }
 }
 
